<resources>
    <string name="app_name">Integra Móvil</string>
    <string name="copyright">Copyright Integra 2020</string>
    <string name="inicia_sesi_n_para_continuar">Inicia sesión para continuar</string>
    <string name="usuario">Usuario</string>
    <string name="espere_por_favor">Espere por favor...</string>
    <string name="ingrese_su_password">Ingrese su password</string>
    <string name="ingrese_su_usuario">Ingrese su nombre de usuario correctamente</string>
    <string name="url_api">http://201.217.136.126/</string>
    <string name="error">Error</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="login">Login</string>
    <string name="guardar">Guardar</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_recepcion_carpetas">Recepción de carpetas </string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="no_hay_datos_para_mostrar">No hay datos para mostrar</string>
    <string name="ingresar">Ingresar</string>
    <string name="recepcion_carpetas">Recepción de carpetas</string>
    <string name="title_activity_confirmar_dua">ConfirmarDuaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="confirmar_dua">Confirmar DUA</string>
    <string name="confirmar_dua_pregunta">¿Confirma el número  de DUA?</string>
    <string name="ingresar_dua">Ingresar DUA</string>
    <string name="proveedor">Proveedor</string>
    <string name="carpeta">Carpeta</string>
    <string name="ingreso_recepciones">Ingreso de recepciones</string>
    <string name="leer_c_digo_de_barras">Leer código de barras</string>
    <string name="largo">Largo</string>
    <string name="ancho">Ancho</string>
    <string name="altura">Altura</string>
    <string name="unidades">Unidades</string>
    <string name="art_culo">Artículo</string>
    <string name="c_digo">Código</string>
    <string name="peso_grs">Peso (grs)</string>
    <string name="cantidad_acumulada">Cantidad acumulada</string>
    <string name="ingresar_cantidad">Ingresar cantidad</string>
    <string name="guardar_cambios">¿Guardar cambios?</string>
    <string name="leer_lpn_destino">Leer LPN destino</string>
    <string name="cantidad_incorrecta">Cantidad incorrecta</string>
    <string name="error_cantidad_menor_cero">La cantidad no puede ser menor que cero</string>
    <string name="la_cantidad_no_puede_ser_cero">La cantidad no puede ser cero</string>
    <string name="aviso_cantidad_acumulada">La cantidad ingresada más la acumulada es mayor que la cantidad solicitada. ¿La confirma de todas maneras?</string>
    <string name="aviso">Aviso</string>
    <string name="ingrese_codigo_ubicacion">Ingrese el código de ubicación</string>
    <string name="guardar_recepcion">Guardar recepción</string>
    <string name="ingrese_lpn_destino">Ingrese el LPN destino</string>

</resources>