<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/layout_ingreso_recepciones"
    >

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">




        <com.google.android.material.textfield.TextInputLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/c_digo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtCodigoArticuloProducto"
                android:enabled="false"
                android:textColor="@color/primary_dark"
                android:text="CART3"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/art_culo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtArticuloProducto"
                android:enabled="false"
                android:textColor="@color/primary_dark"
                android:text="CARTULINA CORTADADA TAMAÑO A3"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/art_culo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtPackProducto"
                android:enabled="false"
                android:textColor="@color/primary_dark"
                android:text="CAJA x10"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dimensiones (en cm)"
            android:paddingTop="10dp"
            android:textStyle="bold"
            android:gravity="center"

            ></TextView>


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="bottom"
                android:layout_height="wrap_content"
                android:hint="@string/largo"
                android:paddingRight="5dp"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtLargoProducto"
                    android:text="0.00"
                    android:textAlignment="textEnd"
                    android:textColor="@color/primary_dark"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="bottom"
                android:layout_height="wrap_content"
                android:hint="@string/ancho"
                android:layout_weight="0.25"
                android:paddingRight="5dp"
                android:layout_width="0dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtAnchoProducto"

                    android:text="0.00"
                    android:textAlignment="textEnd"
                    android:textColor="@color/primary_dark"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="bottom"
                android:layout_height="wrap_content"
                android:hint="@string/altura"
                android:layout_weight="0.25"
                android:paddingRight="5dp"
                android:layout_width="0dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtAlturaProducto"

                    android:text="0.00"
                    android:textAlignment="textEnd"
                    android:textColor="@color/primary_dark"

                    />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="bottom"
                android:layout_height="wrap_content"
                android:hint="@string/peso_grs"
                android:paddingRight="5dp"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtPesoProducto"
                    android:text="0.00"
                    android:textAlignment="textEnd"
                    android:textColor="@color/primary_dark"

                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="bottom"
                android:layout_height="wrap_content"
                android:hint="@string/unidades"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:paddingRight="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtCantidadProducto"

                    android:text="0.00"
                    android:textColor="@color/primary_dark"
                    android:textAlignment="textEnd"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>




<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/btnGuardarProducto"
    app:layout_anchorGravity="bottom|right|end"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_accept_save"
    app:backgroundTint="@color/primary"
    android:layout_alignParentBottom="true"

    android:layout_alignParentRight="true"

    app:fabCustomSize="64dp"
    app:maxImageSize="50dp"
    app:tint="@android:color/white" />





</RelativeLayout>